fixed name variables; used toList; changed live in Country validation;